examples/test/testpolicy12148.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12148
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key22: value5
      key32: value42
      key0: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value2
      podSelector:
        matchLabels:
          key48: value39
          key41: value34
          key7: value32
